--- a/css/style.css
+++ b/css/style.css
@@ -1,489 +1,529 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
 
 /* 공통 st */
 * {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-optical-sizing: auto;
-    box-sizing: border-box;
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  box-sizing: border-box;
 }
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 250px;
-    height: 60px;
-    background-color: rgba(0, 106, 213, 0.7);
-    border: 2px solid rgba(0, 106, 213, 0.7);
-    border-radius: 4px;
-    color: #fff;
-    font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 250px;
+  height: 60px;
+  background-color: rgba(0, 106, 213, 0.7);
+  border: 2px solid rgba(0, 106, 213, 0.7);
+  border-radius: 4px;
+  color: #fff;
+  font-size: 1.2rem;
 }
 
 .btn:hover {
-    background-color: #fff;
-    color: #000;
+  background-color: #fff;
+  color: #000;
 }
 
 .btn.yellow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 250px;
-    height: 60px;
-    background-color: #ffd653;
-    border: 2px solid #ffd653;
-    border-radius: 4px;
-    color: #000;
-    font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  width: 250px;
+  height: 60px;
+  background-color: #ffd653;
+  border: 2px solid #ffd653;
+  border-radius: 4px;
+  color: #000;
+  font-size: 1.2rem;
 }
 .btn.yellow:hover {
-    background-color: #fff;
-    color: #000;
+  background-color: #fff;
+  color: #000;
 }
 /* 공통 nd */
 
 /* 운성 */
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    z-index: 1000;
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    background-color: #333333;
-    padding-right: 20px;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #333333;
+  padding-right: 20px;
 }
 
 .logo {
-    width: 300px;
-    height: 100px;
-    background-image: url('https://ifh.cc/g/31dCk4.png');
-    background-position: center;
-    background-size: cover;
+  width: 300px;
+  height: 100px;
+  background-image: url("https://ifh.cc/g/31dCk4.png");
+  background-position: center;
+  background-size: cover;
 }
 
 .menu {
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: auto; /* Start at the right */
-    margin-right: 20px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: auto; /* Start at the right */
+  margin-right: 20px;
 }
 .menu a {
-    text-decoration: none;
-    color: white;
-    padding: 10px 30px; /* 조절 가능한 패딩 값 */
-    cursor: pointer;
-    margin-left: 20px; /* 오른쪽 마진 추가 */
+  text-decoration: none;
+  color: white;
+  padding: 10px 30px; /* 조절 가능한 패딩 값 */
+  cursor: pointer;
+  margin-left: 20px; /* 오른쪽 마진 추가 */
 }
 
 .menu a:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .title {
-    color: white;
-    padding-right: 20px;
-    cursor: pointer; /* 손 모양 커서 추가 */
-    text-decoration: none; /* 밑줄 제거 */
+  color: white;
+  padding-right: 20px;
+  cursor: pointer; /* 손 모양 커서 추가 */
+  text-decoration: none; /* 밑줄 제거 */
 }
 
 .title:hover {
-    text-decoration: underline; /* 마우스 오버 시 밑줄 효과 */
+  text-decoration: underline; /* 마우스 오버 시 밑줄 효과 */
 }
 
 .List {
-    width: 100%;
-    height: 100px;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    border: 2px solid black;
-    position: relative;
+  width: 100%;
+  height: 100px;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  border: 2px solid black;
+  position: relative;
 }
 /* 운성 */
 
 /* 연희 */
 
 .macbook-pro {
-    background-color: #ffffff;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
 }
 
 .macbook-pro .overlap-group-wrapper {
-    background-color: #ffffff;
-    overflow: hidden;
-    width: 1728px;
-    height: 3248px;
+  background-color: #ffffff;
+  overflow: hidden;
+  width: 1728px;
+  height: 3248px;
 }
 
 .macbook-pro .overlap-group {
-    position: relative;
-    width: 2345px;
-    height: 3897px;
-    top: -119px;
-    left: -257px;
+  position: relative;
+  width: 2345px;
+  height: 3897px;
+  top: -119px;
+  left: -257px;
 }
 
 .macbook-pro .rectangle {
-    position: absolute;
-    width: 3627px;
-    height: 2345px;
-    top: 641px;
-    left: -641px;
-    background-color: #ffd653;
-    transform: rotate(90deg);
+  position: absolute;
+  width: 3627px;
+  height: 2345px;
+  top: 641px;
+  left: -641px;
+  background-color: #ffd653;
+  transform: rotate(90deg);
 }
 
 .macbook-pro .div {
-    position: absolute;
-    width: 246px;
-    height: 931px;
-    top: 119px;
-    left: 139px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 156.5px 156.5px;
+  position: absolute;
+  width: 246px;
+  height: 931px;
+  top: 119px;
+  left: 139px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 156.5px 156.5px;
 }
 
 .macbook-pro .rectangle-2 {
-    position: absolute;
-    width: 245px;
-    height: 741px;
-    top: 119px;
-    left: 385px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 157px 157px;
+  position: absolute;
+  width: 245px;
+  height: 741px;
+  top: 119px;
+  left: 385px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 157px 157px;
 }
 
 .macbook-pro .rectangle-3 {
-    position: absolute;
-    width: 246px;
-    height: 840px;
-    top: 119px;
-    left: 629px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 157px 157px;
+  position: absolute;
+  width: 246px;
+  height: 840px;
+  top: 119px;
+  left: 629px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 157px 157px;
 }
 
 .macbook-pro .rectangle-4 {
-    position: absolute;
-    width: 245px;
-    height: 924px;
-    top: 119px;
-    left: 875px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 156.5px 156.5px;
+  position: absolute;
+  width: 245px;
+  height: 924px;
+  top: 119px;
+  left: 875px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 156.5px 156.5px;
 }
 
 .macbook-pro .rectangle-5 {
-    position: absolute;
-    width: 245px;
-    height: 893px;
-    top: 119px;
-    left: 1366px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 157px 157px;
+  position: absolute;
+  width: 245px;
+  height: 893px;
+  top: 119px;
+  left: 1366px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 157px 157px;
 }
 
 .macbook-pro .rectangle-6 {
-    position: absolute;
-    width: 246px;
-    height: 741px;
-    top: 119px;
-    left: 1120px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 157px 157px;
+  position: absolute;
+  width: 246px;
+  height: 741px;
+  top: 119px;
+  left: 1120px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 157px 157px;
 }
 
 .macbook-pro .rectangle-7 {
-    position: absolute;
-    width: 246px;
-    height: 787px;
-    top: 119px;
-    left: 1610px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 156.5px 156.5px;
+  position: absolute;
+  width: 246px;
+  height: 787px;
+  top: 119px;
+  left: 1610px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 156.5px 156.5px;
 }
 
 .macbook-pro .rectangle-8 {
-    position: absolute;
-    width: 246px;
-    height: 931px;
-    top: 119px;
-    left: 1856px;
-    background-color: #006ad5;
-    border-radius: 0px 0px 157px 157px;
+  position: absolute;
+  width: 246px;
+  height: 931px;
+  top: 119px;
+  left: 1856px;
+  background-color: #006ad5;
+  border-radius: 0px 0px 157px 157px;
 }
 
 .macbook-pro .nevertheless {
-    position: absolute;
-    top: 342px;
-    left: 841px;
-    font-family: 'Gowun Batang-Regular', Helvetica;
-    font-weight: 400;
-    color: #ffffff;
-    font-size: 24px;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: 24px;
+  position: absolute;
+  top: 342px;
+  left: 841px;
+  font-family: "Gowun Batang-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 24px;
 }
 
 .macbook-pro .text-wrapper {
-    line-height: 38.4px;
+  line-height: 38.4px;
 }
 
 .macbook-pro .span {
-    line-height: 28.1px;
+  line-height: 28.1px;
 }
 
 .macbook-pro .text-wrapper-2 {
-    position: absolute;
-    top: 228px;
-    left: 968px;
-    -webkit-text-stroke: 0.5px #000000;
-    font-family: 'Gowun Batang-Regular', Helvetica;
-    font-weight: 400;
-    color: #000000;
-    font-size: 48px;
-    letter-spacing: 0;
-    line-height: 76.8px;
-    white-space: nowrap;
+  position: absolute;
+  top: 228px;
+  left: 968px;
+  -webkit-text-stroke: 0.5px #000000;
+  font-family: "Gowun Batang-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 48px;
+  letter-spacing: 0;
+  line-height: 76.8px;
+  white-space: nowrap;
 }
 
 .macbook-pro .NE-VER-THE-LESS {
-    position: absolute;
-    width: 987px;
-    top: 2640px;
-    left: 1011px;
-    font-family: 'Microsoft Sans Serif-Regular', Helvetica;
-    font-weight: 400;
-    color: #ffffff99;
-    font-size: 190px;
-    text-align: right;
-    letter-spacing: 19px;
-    line-height: 188.1px;
+  position: absolute;
+  width: 987px;
+  top: 2640px;
+  left: 1011px;
+  font-family: "Microsoft Sans Serif-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff99;
+  font-size: 190px;
+  text-align: right;
+  letter-spacing: 19px;
+  line-height: 188.1px;
 }
 
 .macbook-pro .b {
-    position: absolute;
-    width: 298px;
-    top: 1233px;
-    left: 232px;
-    font-family: 'Microsoft Sans Serif-Regular', Helvetica;
-    font-weight: 400;
-    color: #ffffff99;
-    font-size: 200px;
-    letter-spacing: 0;
-    line-height: 158px;
+  position: absolute;
+  width: 298px;
+  top: 1233px;
+  left: 232px;
+  font-family: "Microsoft Sans Serif-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff99;
+  font-size: 200px;
+  letter-spacing: 0;
+  line-height: 158px;
 }
 
 .macbook-pro .text-wrapper-3 {
-    font-family: 'Microsoft Sans Serif-Regular', Helvetica;
-    font-weight: 400;
-    color: #ffffff99;
-    font-size: 200px;
-    letter-spacing: 0;
-    line-height: 158px;
+  font-family: "Microsoft Sans Serif-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff99;
+  font-size: 200px;
+  letter-spacing: 0;
+  line-height: 158px;
 }
 
 .macbook-pro .text-wrapper-4 {
-    font-size: 220px;
-    line-height: 173.8px;
+  font-size: 220px;
+  line-height: 173.8px;
 }
 
 .macbook-pro .rectangle-9 {
-    position: absolute;
-    width: 494px;
-    height: 257px;
-    top: 1105px;
-    left: 338px;
-    background-color: #ffffff4c;
-    border-radius: 74px;
-    border: 5px solid;
-    border-color: #000000;
+  position: absolute;
+  width: 494px;
+  height: 257px;
+  top: 1105px;
+  left: 338px;
+  background-color: #ffffff4c;
+  border-radius: 74px;
+  border: 5px solid;
+  border-color: #000000;
 }
 
 .macbook-pro .rectangle-10 {
-    position: absolute;
-    width: 494px;
-    height: 257px;
-    top: 1105px;
-    left: 874px;
-    background-color: #ffffff4c;
-    border-radius: 74px;
-    border: 5px solid;
-    border-color: #000000;
+  position: absolute;
+  width: 494px;
+  height: 257px;
+  top: 1105px;
+  left: 874px;
+  background-color: #ffffff4c;
+  border-radius: 74px;
+  border: 5px solid;
+  border-color: #000000;
 }
 
 .macbook-pro .rectangle-11 {
-    position: absolute;
-    width: 494px;
-    height: 257px;
-    top: 1105px;
-    left: 1410px;
-    background-color: #ffffff4c;
-    border-radius: 74px;
-    border: 5px solid;
-    border-color: #000000;
+  position: absolute;
+  width: 494px;
+  height: 257px;
+  top: 1105px;
+  left: 1410px;
+  background-color: #ffffff4c;
+  border-radius: 74px;
+  border: 5px solid;
+  border-color: #000000;
 }
 
 .macbook-pro .text-wrapper-5 {
-    top: 1207px;
-    left: 435px;
-    -webkit-text-stroke: 1px #000000;
-    font-size: 45px;
-    text-align: right;
-    letter-spacing: 4.5px;
-    line-height: 44.6px;
-    position: absolute;
-    font-family: 'Gowun Batang-Regular', Helvetica;
-    font-weight: 400;
-    color: #000000;
-    white-space: nowrap;
+  top: 1207px;
+  left: 435px;
+  -webkit-text-stroke: 1px #000000;
+  font-size: 45px;
+  text-align: right;
+  letter-spacing: 4.5px;
+  line-height: 44.6px;
+  position: absolute;
+  font-family: "Gowun Batang-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  white-space: nowrap;
 }
 
 .macbook-pro .text-wrapper-6 {
-    top: 1207px;
-    left: 990px;
-    -webkit-text-stroke: 1px #000000;
-    font-size: 45px;
-    text-align: right;
-    letter-spacing: 4.5px;
-    line-height: 44.6px;
-    position: absolute;
-    font-family: 'Gowun Batang-Regular', Helvetica;
-    font-weight: 400;
-    color: #000000;
-    white-space: nowrap;
+  top: 1207px;
+  left: 990px;
+  -webkit-text-stroke: 1px #000000;
+  font-size: 45px;
+  text-align: right;
+  letter-spacing: 4.5px;
+  line-height: 44.6px;
+  position: absolute;
+  font-family: "Gowun Batang-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  white-space: nowrap;
 }
 
 .macbook-pro .text-wrapper-7 {
-    top: 1207px;
-    left: 1520px;
-    -webkit-text-stroke: 1px #000000;
-    font-size: 45px;
-    text-align: right;
-    letter-spacing: 4.5px;
-    line-height: 44.6px;
-    position: absolute;
-    font-family: 'Gowun Batang-Regular', Helvetica;
-    font-weight: 400;
-    color: #000000;
-    white-space: nowrap;
+  top: 1207px;
+  left: 1520px;
+  -webkit-text-stroke: 1px #000000;
+  font-size: 45px;
+  text-align: right;
+  letter-spacing: 4.5px;
+  line-height: 44.6px;
+  position: absolute;
+  font-family: "Gowun Batang-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  white-space: nowrap;
 }
 
 /* 연희 */
 
 /* mainPage cardSection */
 .mainCards {
-    margin: 80px 0;
-    padding: 20px;
+  margin: 80px 0;
+  padding: 20px;
 }
 .mainCard {
-    display: flex;
-    flex-direction: row;
-    border: 2px solid rgba(0, 106, 213, 0.7);
-    border-radius: 5px;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  border: 2px solid rgba(0, 106, 213, 0.7);
+  border-radius: 5px;
+  justify-content: space-between;
 
-    width: 100%;
-    height: 25vh;
-    padding: 20px;
-    margin-bottom: 20px;
+  width: 100%;
+  height: 25vh;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 .mainCardImgBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0px 30px 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0px 30px 0 10px;
 }
 .profileImageWrap {
-    width: 150px;
-    height: 150px;
-    border-radius: 70%;
-    overflow: hidden;
+  width: 150px;
+  height: 150px;
+  border-radius: 70%;
+  overflow: hidden;
 }
 .mainCardImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .mainProfileName {
-    margin: 20px 0 0 0;
-    font-size: 20px;
-    font-weight: 700;
-    color: rgba(0, 106, 213, 0.7);
+  margin: 20px 0 0 0;
+  font-size: 20px;
+  font-weight: 700;
+  color: rgba(0, 106, 213, 0.7);
 }
 
 .mainCardsContents {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .mainCardsContents p {
-    /* border: 1px solid rgba(0, 106, 213, 0.7); */
-    /* border-radius: 4px; */
-    font-size: 1.2rem;
-    text-align: right;
-    /* padding: 20px; */
+  /* border: 1px solid rgba(0, 106, 213, 0.7); */
+  /* border-radius: 4px; */
+  font-size: 1.2rem;
+  text-align: right;
+  /* padding: 20px; */
 }
 
 .mainCardsContents .btn {
-    text-decoration: none;
-    transition: all 300ms ease;
+  text-decoration: none;
+  transition: all 300ms ease;
 }
 
 .mainCardsContents .btn.default:hover {
-    transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 /* 현우 작업본 */
 .item {
-    width: 360px;
-    height: 315px;
-    border: 1px solid black;
-    text-align: center;
+  width: 360px;
+  height: 315px;
+  border: 1px solid black;
+  text-align: center;
 
-    margin: 20px right 20px auto;
-    h2 {
-        border-bottom: 1px solid black;
-    }
+  margin: 20px right 20px auto;
+  h2 {
+    border-bottom: 1px solid black;
+  }
 }
 
 .container {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 
-    align-items: stretch;
+  align-items: stretch;
 }
 .container-wrapper {
-    width: fit-content;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+/* 윤서 작업본 */
+.mypostingbox {
+  width: 400px;
+  height: fit-content;
+
+  padding: 30px;
+  box-shadow: 0px 0px 3px 0px black;
+  border-radius: 5px;
+  background-color: white;
+
+  justify-content: center;
+}
+.myimg {
+  width: 300px;
+  height: 300px;
+
+  margin: 30px auto 0px auto;
+  box-shadow: 0px 0px 3px 0px black;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+.moge {
+  height: 200px;
+  font-family: "Jua", sans-serif;
+  text-align: center;
+  h2 {
+    margin: 10px;
+  }
+}
+.jua-regular {
+  font-family: "Jua", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+  color: #006ad5;
+  margin: 20px;
+
+  text-align: center;
 }
