--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,8 @@ p {
   font-size: 150px;
   margin: 20px 40px 0px auto;
 }
+/* 모형들 */
+
 .main {
   position: fixed;
   position: relative;
@@ -168,7 +170,6 @@ p {
 
 .withoutwave {
   width: 100%;
-  height: 558px;
   margin: 0;
   padding: 0;
   display: flex;
@@ -201,7 +202,21 @@ p {
   text-align: center;
 }
 
-.yhcard {
+.yhcard1 {
+  width: 300px;
+  height: 420px;
+  border-radius: 15vh;
+  border-style: ridge;
+  border-color: #006ad5;
+  border-width: 1px;
+  border-radius: 5vh;
+  margin: 0 5% 0 5%;
+  padding: 5px 25px 5px 25px;
+}
+
+.yhcard2 {
+  width: 650px;
+  height: 420px;
   border-radius: 15vh;
   border-style: ridge;
   border-color: #006ad5;
@@ -282,6 +297,7 @@ p {
   margin: 20px auto;
 }
 .mainCardImgBox {
+  width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -321,6 +337,7 @@ p {
 }
 
 .mainCardsContents {
+  width: 658px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -343,6 +360,7 @@ p {
   /* background-color: #fff; */
 }
 .mainCardsContents p.title {
+  width: 300px;
   color: #333333;
   font-weight: 500;
   background-color: #ffd7536e;
@@ -379,7 +397,6 @@ p {
 .mainCard .mainCardsTxtBox div .title {
   background-color: #fff;
   font-size: 1.2rem;
-  width: 300px;
   margin: 0;
   text-align: left;
   padding: 0;
@@ -455,4 +472,8 @@ p {
   margin: 20px;
 
   text-align: center;
+}
+.card-img-top1 {
+  width: 100%;
+  height: 170px;
 }
