--- a/css/guest.css
+++ b/css/guest.css
@@ -146,12 +146,16 @@ a:hover {
     border-color: none;
     background-color: #FFD653;
     border-radius: 20px;
-    margin: 20px 200px 10px 200px;
+   
     position: relative;
     display: flex;
     align-items:flex-end;
-    width: 45rem;
-  
+    margin-top: 5%;
+  }
 
-}
+  .card-body{
+    position:relative;
+    margin-left: 40%;
+    text-align: center;
+  }
 /* 연희 끝 */
